Bug 249253 - Moved plots have no keyboard control any more
Summary: Moved plots have no keyboard control any more
Status: RESOLVED FIXED
Alias: None
Product: kst
Classification: Applications
Component: plotting (other bugs)
Version First Reported In: 2.0.1
Platform: Unlisted Binaries All
: NOR normal
Target Milestone: 2.0.1
Assignee: kst
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-08-27 19:27 UTC by Peter Kümmel
Modified: 2010-11-12 10:37 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Peter Kümmel 2010-08-27 19:27:57 UTC
Version:           2.0.1
OS:                All

After D&D a plot to a other tab the plot doesn't react on keyboard commands.

Reproducible: Always




OS: Linux
Comment 1 Peter Kümmel 2010-08-30 12:17:08 UTC
--- Comment #2 from Nicolas Brisset <nicolas brisset eurocopter com>  2010-08-29 20:03:40 ---
Hum, I've just tested it and it is cool. I'm reopening it however as there is
apparently only a small problem left, the plot seems to be "confused" between
layout and zoom mode, as if the tab that gets activated were not in layout mode
and then all of the plots would not be like the others. I don't know if the
button toggles the mode for all plots in a given tab, or session-wide, but
maybe that's a direction to investigate. I think it's very close :-)
Thanks!

Note that while trying to get zoom to work in a moved plot I somehow managed to
crash kst. I haven't yet been able to reproduce, otherwise I'll tell you but I
feel it's related to that.
Comment 2 Peter Kümmel 2010-08-30 12:22:07 UTC
SVN commit 1169929 by kuemmel:

Change ownership when moving plot to a other tab.
Don't manage the parent via QObject: this change could be critical, see new macro in viewitem.cpp.
Using 'Z' on a plot in the other tab doesn't hide the moved plot an more.

CCBUG: 249253 

 M  +1 -1      arrowitem.cpp  
 M  +1 -1      boxitem.cpp  
 M  +1 -1      circleitem.cpp  
 M  +1 -1      ellipseitem.cpp  
 M  +1 -1      labelitem.cpp  
 M  +4 -4      layoutboxitem.cpp  
 M  +1 -1      legenditem.cpp  
 M  +1 -1      lineitem.cpp  
 M  +1 -1      pictureitem.cpp  
 M  +5 -5      plotitem.cpp  
 M  +1 -1      plotrenderitem.cpp  
 M  +1 -1      sharedaxisboxitem.cpp  
 M  +1 -1      svgitem.cpp  
 M  +2 -0      tabwidget.cpp  
 M  +42 -12    viewitem.cpp  
 M  +9 -1      viewitem.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1169929
Comment 3 Peter Kümmel 2010-08-30 14:33:19 UTC
SVN commit 1169970 by kuemmel:

enable shortcuts on moved plots

BUG: 249253

 M  +3 -0      plotrenderitem.cpp  
 M  +6 -0      view.cpp  
 M  +13 -3     viewitem.cpp  
 M  +1 -0      viewitem.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1169970
Comment 4 Nicolas Brisset 2010-08-30 14:59:10 UTC
Sorry, this isn't completely done yet: when you single-left-click on the moved plot in the tab you've put it into, it instantly opens-up the edit plot dialog. That makes zooming with the mouse impossible in moved plots, as it required click & drag. It should be fixed.
Comment 5 Peter Kümmel 2010-08-30 15:26:52 UTC
I don't see this under Windows. 
Could you check if the bug is gone after saving and loading the document?
Comment 6 Peter Kümmel 2010-08-30 16:35:41 UTC
SVN commit 1170012 by kuemmel:

Under Windows it now looks correct with msvc and Qt 4.7 beta

CCBUG:249253


 M  +3 -1      viewitem.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1170012
Comment 7 Nicolas Brisset 2010-08-30 18:50:08 UTC
OK, I think I got it: the layout mode state is remembered for each tab (maybe we should change that, I think it should be session-wide...). 
In any case, the moved plot still inherits the layout mode status from its old tab. If you switch back to the old tab and disable layout mode there, then move back to the new plot, then you can zoom normally. It looks like the status is not reparented correctly.
There is still from time to time the wrong cursor, but that's probably the already Qt bug and at least it works.
Comment 8 Peter Kümmel 2010-09-02 16:30:08 UTC
SVN commit 1171048 by kuemmel:

also reparent renderItems

CCBUG: 249253

 M  +9 -1      tabwidget.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1171048
Comment 9 Peter Kümmel 2010-09-02 16:33:22 UTC
SVN commit 1171050 by kuemmel:

don't confuse layout mode: D&D in Data mode

BUG: 249253

 M  +2 -2      viewitem.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1171050
Comment 10 Peter Kümmel 2010-09-02 17:18:51 UTC
SVN commit 1171060 by kuemmel:

add workaround for Qt bug 
http://bugreports.qt.nokia.com/browse/QTBUG-8188

CCBUG:249253
CCBUG:247634


 M  +12 -2     plotrenderitem.cpp  
 M  +3 -3      view.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1171060
Comment 11 Peter Kümmel 2010-11-12 10:37:02 UTC
There is no version list for "Version Fixed in".
Use Target Milestone as indicator when the bug was fixed.