enable shortcuts on moved plots

BUG: 249253

git-svn-id: svn://anonsvn.kde.org/home/kde/branches/work/kst/portto4/kst@1169970 283d02a7-25f6-0310-bc7c-ecb5cbfe19da